# fastapi-jspsych-experiment-template-public

./: README.md  cli.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/: index.html
frontend/src/csv/: ASI.csv  GES.csv  GES_scoring_info.csv  SECS.csv  stimulus.csv
frontend/src/html/: consent.html  debriefing.html  extendedSurvey.html  survey.html
frontend/src/js/: experiment.js  index.js  stimuli.js  trials.js
