[project]
name = "fastapi-jspsych-experiment-template-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "fastapi-utils>=0.8.0",
    "fire>=0.7.1",
    "gunicorn>=25.2.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pysnooper>=1.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "sqlmodel>=0.0.37",
    "typing-inspect>=0.9.0",
    "uvicorn[standard]>=0.42.0",
]
